[package]
name = "parsey"
version = "0.1.0"
authors = ["Alex Shand <alex@alexshand.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax-abuse = { git = "https://github.com/Alex-Shand/syntax-abuse" }
derive_deref = "1.1.1"